--- a/client.html
+++ b/client.html
@@ -21,9 +21,11 @@
     $("#username").val("");
     $("#password").val("");
     url = "/users/" + type;
-    alert(url);
     data = JSON.stringify({ user: username, password: password });
-    $.ajax({ type: 'POST', url: url, data: data, contentType: "application/json", dataType: "json", success: login, error: error});
+    function handle = add;
+    if (type == 'login')
+        handle = login;
+    $.ajax({ type: 'POST', url: url, data: data, contentType: "application/json", dataType: "json", success: handle, error: error});
   }
 
   function login(data)
