--- a/client.html
+++ b/client.html
@@ -40,7 +40,7 @@
    else if (data.errCode == -4)
      alert ("The password you're trying to add is invalid. A valid password must be no more than 128 characters long.");
   else
-     alert ("Gentlemen, behold! I am one can short of a six-pack!")l
+     alert ("Gentlemen, behold! I am one can short of a six-pack!");
    }     
   }
   
